--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
   "name": "reactjs",
   "version": "1.0.0",
-  "description": "This is my project by Hema",
-  
+  "description": "This is react by Hemalatha",
   "scripts": {
+    "start" : "parcel index.html",
+    "build" : "parcel build",
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Hemad1511/reactproject.git"
+    "url": "git+https://github.com/Hemad1511/reactproject.git"
   },
-  "author": "\"Hemalatha\"",
+  "keywords": [],
+  "author": "Hemalatha",
   "license": "ISC",
-
-  "browserslist" : ["last 2 versions"]
-
+  "bugs": {
+    "url": "https://github.com/Hemad1511/reactproject/issues"
+  },
+  "homepage": "https://github.com/Hemad1511/reactproject#readme",
+  "devDependencies": {
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
